martian-derive/tests/ui_martian_type/derive_invalid_enum.rs
use martian_derive::MartianType;

#[derive(MartianType)]
enum Invalid {
	StrVariant,
	MapVariant(u32),
	AnotherVariant { f: i32 }
}

fn main() {}
